[package]
name = "lecp"
version = "0.1.0"
authors = ["Curtis Maves <curtismaves@gmail.com>"]
edition = "2018"

[[bin]]
name = "ecp-controller"
required-features = ["rpi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["ham-xpt", "bluetooth"]

ham-xpt = ["ham"]
rpi = ["rs_ws281x"]
bluetooth = ["rustable"]

[dependencies]
clap = "2.33.0"
gpio-cdev = "0.2.0"
ham = { version = "0.2.0", optional=true }
rs_ws281x = { version = "0.2.3", optional=true }
# btutils = { git = "https://github.com/cmaves/btutils.git" }
btutils = { path  = "/home/cmaves/btutils" }
rustable = { git = "https://github.com/cmaves/rustable", branch = "async", optional = true }
# rustable = { path = "/home/cmaves/rustable", optional = true }
async-std = "1.9"
futures = "0.3"
spidev = "0.4.0"
nix = "0.18.0"
log = "0.4"

[dev-dependencies]
rand = "0.7.3"


